# tray-tui

./: .gitignore  Cargo.toml  README.md  config  config_example.toml  flake.nix  shell.nix
src/: app.rs  cli.rs  config.rs  event.rs  handler.rs  main.rs  tui.rs  ui.rs  wrappers.rs
