[package]
name = "tray-tui"
description = "System tray in your terminal"
repository = "https://github.com/Levizor/tray-tui"
homepage =  "https://github.com/Levizor/tray-tui"

version = "0.2.1"
authors = ["Levizor <levizorri@gmail.com>", "EliasDevis <elias.devis@protonmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
config = "0.15.11"
crokey = "1.2.0"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
indexmap = "2.9.0"
log = "0.4.27"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref", "serde"] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
simplelog = "0.12.2"
system-tray = {version = "0.8.0"}
tokio = { version = "1.45.1", features = ["full"] }
tui-tree-widget = "0.23.1"
